--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     
     <section class="banner">
         <h1>Selamat datang<br><span>My Portofolio.</span></h1>
-        Lorem, ipsum dolor sit amet consectetur 
+        Selamat datang di portofolio saya.
+Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development
+Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.
     </section>
     <section class="welcome">
         <div class="container">
@@ -106,3 +108,4 @@
 </body>
 
 </html>
+
