Revise content in index.html for portfolio page
Updated the content of the portfolio webpage, including the welcome section and added a paragraph to the banner.

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     
     <section class="banner">
         <h1>Selamat datang<br><span>My Portofolio.</span></h1>
-        Selamat datang di portofolio saya.
+       <p> Selamat datang di portofolio saya.
 Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development
-Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.
+Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.</p>
     </section>
     <section class="welcome">
         <div class="container">
@@ -108,5 +108,6 @@ Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras —
 </body>
 
 </html>
+
 
 
