--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="banner">
         <h1>Selamat datang<br><span>My Portofolio.</span></h1>
        <p> Selamat datang di portofolio saya.
-Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development</p>
+Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development</p><br>
 <p>Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.</p>
     </section>
     <section class="welcome">
@@ -108,6 +108,7 @@ Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia
 </body>
 
 </html>
+
 
 
 
