--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@ Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia
         <div class="container">
 
             <div class="welcome-left">
-                <img src="images/myfoto.jpeg" alt="foto" width="280" height="275">
+                <img src="images/myfoto.jpeg" alt="foto" width="250" height="235">
             </div>
             <div class="welcome-right">
                 <h3>HALLO SOBAT!!</h3>
                 <h2>I'm Hafidz, Data Science 2024</h2>
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					Halo! Saya merupakan alumni SMKN 3 Metro jurusan RPL, dan kini sedang menempuh pendidikan di bidang Sains Data ITERA.
+Saya tertarik pada bagaimana data dan teknologi dapat bekerja bersama untuk menghasilkan informasi dan keputusan yang cerdas.
+Dengan latar belakang pemrograman yang kuat, saya terus belajar menggabungkan logika, analisis, dan kreativitas dalam setiap proyek yang saya kerjakan.
                 </div>
               <a href="https://drive.google.com/file/d/1ofi2oFZ5A5qabC7pAqxbou5q7z1-WEpl/view?usp=drivesdk" class="button"><i class="fa fa-download"></i> Download CV</a>
             </div>
@@ -108,6 +110,7 @@ Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia
 </body>
 
 </html>
+
 
 
 
