--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     
     <section class="banner">
         <h1>Selamat datang<br><span>My Portofolio.</span></h1>
-       <p> Selamat datang di portofolio saya.
-Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development</p><br>
-<p>Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.</p>
+       <p class="text"> Selamat datang di portofolio saya.
+Di sini, Anda dapat melihat hasil karya, proyek, dan perjalanan saya dalam dunia Web Development
+Saya percaya bahwa setiap ide hebat dimulai dari kreativitas dan kerja keras — dan inilah wujudnya.</p>
     </section>
     <section class="welcome">
         <div class="container">
@@ -110,6 +110,7 @@ Dengan latar belakang pemrograman yang kuat, saya terus belajar menggabungkan lo
 </body>
 
 </html>
+
 
 
 
