Fix HTML formatting and improve content

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@ Dengan latar belakang pemrograman yang kuat, saya terus belajar menggabungkan lo
                         <div class="news-text">
                             <a href="#" class="title-news">Website No Covid</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                            Website NoCovid merupakan media informasi yang dibuat untuk meningkatkan kesadaran masyarakat terhadap pentingnya pencegahan virus corona.
+Situs ini menyajikan edukasi tentang apa itu virus corona, cara melindungi diri, serta langkah-langkah hidup sehat sesuai dengan program GERMAS (Gerakan Masyarakat Hidup Sehat).
+Dengan desain yang sederhana dan informatif, NoCovid diharapkan dapat membantu pengguna memahami pentingnya menjaga kesehatan diri demi melindungi dunia dari penyebaran virus.
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -110,6 +112,7 @@ Dengan latar belakang pemrograman yang kuat, saya terus belajar menggabungkan lo
 </body>
 
 </html>
+
 
 
 
