Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@ Dengan desain yang sederhana dan informatif, NoCovid diharapkan dapat membantu p
                         <div class="news-text">
                             <a href="#" class="title-news">Aplikasi Uang Kas</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                                Aplikasi Uang Kas Kelas merupakan sistem berbasis web yang dirancang untuk membantu dalam pengelolaan keuangan kelas secara lebih mudah, cepat, dan terorganisir.
+Aplikasi ini memiliki fitur utama seperti pencatatan data petugas dan anggota, pemasukan dan pengeluaran kas, serta laporan keuangan otomatis.
+Dengan tampilan dashboard yang sederhana dan informatif, aplikasi ini memudahkan admin atau bendahara kelas untuk memantau saldo kas secara real-time, sehingga transparansi dan akurasi data keuangan dapat terjaga.
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -112,6 +114,7 @@ Dengan desain yang sederhana dan informatif, NoCovid diharapkan dapat membantu p
 </body>
 
 </html>
+
 
 
 
