--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@ Dengan latar belakang pemrograman yang kuat, saya terus belajar menggabungkan lo
                             <a href="#" class="title-news">Website No Covid</a>
                             <p>
                             Website NoCovid merupakan media informasi yang dibuat untuk meningkatkan kesadaran masyarakat terhadap pentingnya pencegahan virus corona.
-Situs ini menyajikan edukasi tentang apa itu virus corona, cara melindungi diri, serta langkah-langkah hidup sehat sesuai dengan program GERMAS (Gerakan Masyarakat Hidup Sehat).
-Dengan desain yang sederhana dan informatif, NoCovid diharapkan dapat membantu pengguna memahami pentingnya menjaga kesehatan diri demi melindungi dunia dari penyebaran virus.
+Situs ini menyajikan edukasi tentang apa itu virus corona,... 
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -84,8 +83,7 @@ Dengan desain yang sederhana dan informatif, NoCovid diharapkan dapat membantu p
                             <a href="#" class="title-news">Aplikasi Uang Kas</a>
                             <p>
                                 Aplikasi Uang Kas Kelas merupakan sistem berbasis web yang dirancang untuk membantu dalam pengelolaan keuangan kelas secara lebih mudah, cepat, dan terorganisir.
-Aplikasi ini memiliki fitur utama seperti pencatatan data petugas dan anggota, pemasukan dan pengeluaran kas, serta laporan keuangan otomatis.
-Dengan tampilan dashboard yang sederhana dan informatif, aplikasi ini memudahkan admin atau bendahara kelas untuk memantau saldo kas secara real-time, sehingga transparansi dan akurasi data keuangan dapat terjaga.
+Aplikasi ini memiliki fitur utama seperti pencatatan ....
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -114,6 +112,7 @@ Dengan tampilan dashboard yang sederhana dan informatif, aplikasi ini memudahkan
 </body>
 
 </html>
+
 
 
 
