--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Situs ini menyajikan edukasi tentang apa itu virus corona,...
                             <a href="#" class="title-news">Aplikasi Uang Kas</a>
                             <p>
                                 Aplikasi Uang Kas Kelas merupakan sistem berbasis web yang dirancang untuk membantu dalam pengelolaan keuangan kelas secara lebih mudah, cepat, dan terorganisir.
-Aplikasi ini memiliki fitur utama seperti pencatatan ....
+Aplikasi ini memiliki fitur utama seperti...
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -95,7 +95,8 @@ Aplikasi ini memiliki fitur utama seperti pencatatan ....
                         <div class="news-text">
                             <a href="#" class="title-news">Game DINO RUN</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                                Dino Run merupakan game berbasis web sederhana yang dikembangkan menggunakan HTML, CSS, dan JavaScript.
+Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbagai rintangan untuk mendapatkan skor setinggi mungkin.
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -112,6 +113,7 @@ Aplikasi ini memiliki fitur utama seperti pencatatan ....
 </body>
 
 </html>
+
 
 
 
