Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ Aplikasi ini memiliki fitur utama seperti...
                             <a href="#" class="title-news">Game DINO RUN</a>
                             <p>
                                 Dino Run merupakan game berbasis web sederhana yang dikembangkan menggunakan HTML, CSS, dan JavaScript.
-Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbagai rintangan untuk mendapatkan skor setinggi mungkin.
+Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbagai rintangan untuk mendapatkan skor...
                             </p>
                             <a href="#" class="button">Read More</a>
                         </div>
@@ -113,6 +113,7 @@ Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbag
 </body>
 
 </html>
+
 
 
 
