--- a/portofolio.html
+++ b/portofolio.html
@@ -46,7 +46,8 @@
                         <div class="news-text">
                             <a href="port1.html" class="title-news">Website No Covid</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                                                            Website NoCovid merupakan media informasi yang dibuat untuk meningkatkan kesadaran masyarakat terhadap pentingnya pencegahan virus corona.
+Situs ini menyajikan edukasi tentang apa itu virus corona,... 
                             </p>
                             <a href="port1.html" class="button">Read More</a>
                         </div>
