--- a/about.html
+++ b/about.html
@@ -41,23 +41,20 @@
 
             <img src="images/myfoto.jpeg" alt="virus red" width="200" class="img-about" align="left">
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Halo! Nama saya Hafidz Wahdiansyah, seorang mahasiswa Institut Teknologi Sumatera (ITERA) jurusan Sains Data. Saya merupakan alumni SMKN 3 Metro, dari jurusan Rekayasa Perangkat Lunak (RPL). Latar belakang pendidikan saya di bidang teknologi informasi menjadi pondasi kuat dalam mengembangkan berbagai ide dan proyek digital yang saya tekuni hingga saat ini. 
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             Sejak masa sekolah di SMK, saya sudah tertarik pada dunia pemrograman dan pengembangan aplikasi berbasis web. Rasa ingin tahu yang tinggi membuat saya senang bereksperimen dengan berbagai bahasa pemrograman dan framework modern. Kini, saya terus mengasah kemampuan saya dalam membangun website yang tidak hanya berfungsi dengan baik, tetapi juga memiliki tampilan menarik serta pengalaman pengguna yang nyaman   
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Selama berkuliah di jurusan Sains Data, saya juga belajar untuk menggabungkan kemampuan analisis data dengan pemrograman. Bagi saya, data dan web adalah dua hal yang saling melengkapi — data memberi makna, sedangkan web menjadi sarana untuk menampilkan makna tersebut kepada dunia. Melalui proyek-proyek yang saya buat, saya berusaha menghubungkan teknologi dengan solusi nyata yang bisa bermanfaat bagi banyak orang.
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Selain dunia teknologi, saya juga memiliki hobi yang cukup sederhana namun menyenangkan — bermain game dan bengong. Bermain game bagi saya bukan hanya hiburan, tapi juga sarana untuk belajar tentang strategi, kreativitas, dan cara berpikir logis. Sedangkan bengong adalah momen saya untuk beristirahat sejenak, memikirkan ide-ide baru, dan menyegarkan pikiran dari rutinitas coding yang padat. 
             </p>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
+                Saya lahir dan dibesarkan di Kota Metro, dan saat ini saya bertempat tinggal di Metro Kibang, Lampung Timur. Tempat ini menjadi ruang tenang yang memberi saya banyak inspirasi untuk terus berkarya. Dengan semangat belajar dan keinginan untuk berkembang, saya berharap dapat menciptakan lebih banyak karya digital yang bermanfaat, serta menjadi bagian dari kemajuan dunia teknologi di masa depan.
+            </p>
 
             <div class="clear"></div>
         </div>
