--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
     <section class="banner">
         <h1><span>About Us</span></h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ngoding, Nyantui, dan Nyalakan Ide
     </section>
     <section class="welcome">
         <div class="container">
