--- a/portofolio.html
+++ b/portofolio.html
@@ -34,7 +34,7 @@
 
     <section class="banner">
         <h1><span>My Portofolio</span></h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Selamat datang di halaman proyek saya
     </section>
     <section class="bg-gray">
         <div class="container">
