--- a/portofolio.html
+++ b/portofolio.html
@@ -59,7 +59,8 @@ Situs ini menyajikan edukasi tentang apa itu virus corona,...
                         <div class="news-text">
                             <a href="port2.html" class="title-news">Aplikasi Uang Kas</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                                                              Aplikasi Uang Kas Kelas merupakan sistem berbasis web yang dirancang untuk membantu dalam pengelolaan keuangan kelas secara lebih mudah, cepat, dan terorganisir.
+Aplikasi ini memiliki fitur utama seperti...  
                             </p>
                             <a href="port2.html" class="button">Read More</a>
                         </div>
