--- a/portofolio.html
+++ b/portofolio.html
@@ -72,7 +72,8 @@ Aplikasi ini memiliki fitur utama seperti...
                         <div class="news-text">
                             <a href="port.html" class="title-news">Game DINO RUN.</a>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                                                              Dino Run merupakan game berbasis web sederhana yang dikembangkan menggunakan HTML, CSS, dan JavaScript.
+Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbagai...
                             </p>
                             <a href="news3.html" class="button">Read More</a>
                         </div>
