--- a/portofolio.html
+++ b/portofolio.html
@@ -85,8 +85,7 @@ Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbag
                         <div class="news-text">
                             <a href="port4.html" class="title-news">Website kalkulator.</a>
                             <p>
-                               Aplikasi Kalkulator ini dirancang untuk membantu pengguna melakukan perhitungan angka dengan cepat, akurat, dan efisien. Dilengkapi dengan fitur dasar seperti penjumlahan, pengurangan, perkalian, dan pembagian, aplikasi ini memudahkan kegiatan sehari-hari dalam menghitung secara praktis.
-                            </p>
+                               Aplikasi Kalkulator ini dirancang untuk membantu pengguna melakukan perhitungan angka dengan cepat, akurat, dan efisien. Dilengkapi dengan fitur dasar seperti penjumlahan, pengurangan, perkalian, dan pembagian...        </p>
                             <a href="news1.html" class="button">Read More</a>
                         </div>
                     </div>
