--- a/portofolio.html
+++ b/portofolio.html
@@ -44,7 +44,7 @@
                     <div class="in-news">
                         <img src="images/webnocovid.png" alt="port1">
                         <div class="news-text">
-                            <a href="port1.html" class="title-news">Website No Covid</a>
+                            <a href="#" class="title-news">Website No Covid</a>
                             <p>
                                                             Website NoCovid merupakan media informasi yang dibuat untuk meningkatkan kesadaran masyarakat terhadap pentingnya pencegahan virus corona.
 Situs ini menyajikan edukasi tentang apa itu virus corona,... 
@@ -57,7 +57,7 @@ Situs ini menyajikan edukasi tentang apa itu virus corona,...
                     <div class="in-news">
                         <img src="images/uangkas.jpeg" alt="port 2">
                         <div class="news-text">
-                            <a href="port2.html" class="title-news">Aplikasi Uang Kas</a>
+                            <a href="#" class="title-news">Aplikasi Uang Kas</a>
                             <p>
                                                               Aplikasi Uang Kas Kelas merupakan sistem berbasis web yang dirancang untuk membantu dalam pengelolaan keuangan kelas secara lebih mudah, cepat, dan terorganisir.
 Aplikasi ini memiliki fitur utama seperti...  
@@ -70,7 +70,7 @@ Aplikasi ini memiliki fitur utama seperti...
                     <div class="in-news">
                         <img src="images/dinorun.png" alt="port 3">
                         <div class="news-text">
-                            <a href="port.html" class="title-news">Game DINO RUN.</a>
+                            <a href="#" class="title-news">Game DINO RUN.</a>
                             <p>
                                                               Dino Run merupakan game berbasis web sederhana yang dikembangkan menggunakan HTML, CSS, dan JavaScript.
 Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbagai...
@@ -83,10 +83,10 @@ Pemain mengendalikan seekor dinosaurus yang harus berlari dan menghindari berbag
                     <div class="in-news">
                         <img src="images/kalkulator.png" alt="port 4">
                         <div class="news-text">
-                            <a href="port4.html" class="title-news">Website kalkulator.</a>
+                            <a href="#" class="title-news">Website kalkulator.</a>
                             <p>
                                Aplikasi Kalkulator ini dirancang untuk membantu pengguna melakukan perhitungan angka dengan cepat, akurat, dan efisien. Dilengkapi dengan fitur dasar seperti penjumlahan, pengurangan, perkalian, dan pembagian...        </p>
-                            <a href="news1.html" class="button">Read More</a>
+                            <a href="#" class="button">Read More</a>
                         </div>
                     </div>
                 </div>
