--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </div>
     <section class="banner">
         <h1><span>Contact Us</span></h1>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit
+        Info lebih lanjut, hubungi saya
     </section>
     <section class="welcome">
                 <div class="container">
@@ -45,7 +45,11 @@
                 <h3>Address</h3>
                 <h4>Metro Kibang, Lampung Timur</h4>
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                   Hai! Jika kamu ingin bekerja sama, bertanya seputar project, atau sekadar ngobrol santai tentang dunia teknologi dan pengembangan web, jangan ragu untuk menghubungi saya melalui kontak di bawah ini:
+
+📱 No. HP: 0895-0657-4727
+📸 Instagram: @apiszzaja_
+📍 Alamat: Jl. Paroan, Dusun 6 Kibang, Kecamatan Metro Kibang, Kabupaten Lampung Timur, Lampung
                 </div>
             </div>
 
