--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 <a href="http://facebook.com"><img src="images/icon_facebook.png" alt="facebook"></a>
                 <a href="http://twitter.com"><img src="images/icon_twitter.png" alt="twitter"></a>
                 <a href="http://tiktok.com"><img src="images/icon_tiktok.png" alt="tiktok"></a>
-                <a href="http://instagram.com"><img src="images/icon_instagram.png" alt="instagram"></a>
+                <a href="https://www.instagram.com/apiszzaja_?igsh=MWRwdWpiNDN1ZHBibg=="><img src="images/icon_instagram.png" alt="instagram"></a>
             </div>
 
             <div class="clear"></div>
